baml_language/crates/baml_tests/snapshots/compiles/numeric_literal_method_call/baml_tests__compiles__numeric_literal_method_call__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== HIR2 ===
function user.BigintToStringBareLiteral() -> string  [expr] {
  {  } 42n.to_string()
}
function user.FloatFloorBareLiteral() -> float  [expr] {
  {  } 2.5.floor()
}
function user.IntAbsBareLiteral() -> int  [expr] {
  {  } 3.abs()
}
function user.IntPowBareLiteral() -> int  [expr] {
  {  } 2.pow(3)
}
function user.IntToStringBareLiteral() -> string  [expr] {
  {  } 7.to_string()
}
