baml_language/crates/baml_tests/snapshots/compiles/numeric_literal_method_call/baml_tests__compiles__numeric_literal_method_call__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.IntToStringBareLiteral() -> string throws never {
  { : string
    7.to_string() : string
  }
}
function user.IntAbsBareLiteral() -> int throws never {
  { : int
    3.abs() : int
  }
}
function user.IntPowBareLiteral() -> int throws never {
  { : int
    2.pow(3) : int
  }
}
function user.FloatFloorBareLiteral() -> float throws never {
  { : float
    2.5.floor() : float
  }
}
function user.BigintToStringBareLiteral() -> string throws never {
  { : string
    42n.to_string() : string
  }
}
