baml_language/crates/baml_tests/snapshots/compiles/numeric_literal_method_call/baml_tests__compiles__numeric_literal_method_call__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function boundary.LocalId.capture(self: boundary.LocalId, inputs: bool | null, output: bool | null, error: bool | null) -> boundary.LocalId {
}

function boundary.id() -> boundary.LocalId {
}

function boundary.id.current() -> string {
}

function reflect.call_any(f: baml.AnyFunction<Returns = R, Throws = E>, args: map<string, unknown>) -> R {
}

function reflect.signature(f: baml.AnyFunction<Returns = unknown, Throws = unknown>) -> reflect.Signature {
}

function user.BigintToStringBareLiteral() -> string {
    load_type 42n
    load_const 42n
    call baml.String.from
    return
}

function user.FloatFloorBareLiteral() -> float {
    load_const 2.5
    call baml.Float.floor
    return
}

function user.IntAbsBareLiteral() -> int {
    load_const 3
    call baml.Int.abs
    return
}

function user.IntPowBareLiteral() -> int {
    load_const 2
    load_const 3
    call baml.Int.pow
    return
}

function user.IntToStringBareLiteral() -> string {
    load_type 7
    load_const 7
    call baml.String.from
    return
}
